# paddl

./: .env.example  .gitignore  cabinet_widget.js  main.py  pyproject.toml  widget.js  widget_terehovo.js
automation/: __init__.py  browser.py  tasks.py
bot/: handlers.py  main.py  parser.py  utils.py
